--- a/index.html
+++ b/index.html
@@ -5,30 +5,166 @@
     <title>Title</title>
 
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
 </head>
 <body>
 
-    <div id="header">
+    <div class="header">
         <span>AwesomeUploader</span>
      <span>
 
-           <ul>
-            <li><a href="#">Feature</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Log In</a></li>
 
-        </ul>
+            <a href="#">Feature</a>
+            <a href="#">Pricing</a>
+            <a href="#">About</a>
+            <a href="#">Log In</a>
 
      </span>
 
-
-
     </div>
 
-    <div id="content" >
+    <div class="content" >
+
+        <div class="columns" id="first-column">
+
+            <h2>Upload files to the cloud</h2>
+
+            <ul>
+                <li><img src="IMG/dropbox.png" id="dropbox"></li>
+                <li><img src="IMG/google.png" id="google" alt=""></li>
+                <li><img src="IMG/amazon.png" id="amazon" alt=""></li>
+
+            </ul>
 
 
+
+            <h2>Using any popular JS framework</h2>
+            <ul>
+                <li><img src="IMG/AngularJS-large.png" id="angular" alt=""></li>
+                <li><img src="IMG/backbone.png" id="backbone" alt=""></li>
+                <li><img src="IMG/Ember.js_Logo_and_Mascot.png" id="ember" alt=""></li>
+            </ul>
+
+
+            <h2>On any device & modern browser</h2>
+            <ul>
+                <li><img src="IMG/device-icons.png" id="device" alt=""></li>
+                <li><img src="IMG/Web-Browser-Icon.png" id="browser" alt=""></li>
+            </ul>
+
+            <button id="sign">Sign Up</button>
+
+            <button id="learn">Learn More</button>
+        </div>
+
+        <div class="columns" id="second-column">
+            <p>DEMO</p>
+        </div>
+
+        <h2 class="details">Features</h2>
+
+        <div class="text">
+            <p>THIS PLUGIN IS THE MOST EXTENDABLE, CUSTOMIZABLE, HEAVILY TESTED TOOL OF ITS KIND</p>
+
+            <p>Our feature list is in an on-going refactoring process.</p>
+            <p>We aim to have the coolest features backed up by the most beautiful code</p>
+
+
+        </div>
+
+        <div class="coloane-bulinate">
+        <div class="column-1">
+            <div  class="list">
+                <div class="circle"><i class="my-icon fa fa-paperclip fa-2x" aria-hidden="true"></i>
+                </div>
+                <p>Multiple files</p>
+                <p>Including support for folder upload.</p>
+            </div>
+
+            <div class="list">
+                <div class="circle"><i class="my-icon fa fa-globe fa-2x" aria-hidden="true"></i>
+                </div>
+                <p>Documented</p>
+                <p>Built by developers. We understand the importance of good docs.</p></div>
+            <div class="list">
+                <div class="circle"><i class="my-icon fa fa-globe fa-2x" aria-hidden="true"></i></div>
+                <p>Chunking</p>
+                <p>Multiple chunks for each file are uploaded simultaneously</p></div>
+
+        </div>
+
+
+        <div class="column-2">
+            <div class="list">
+                <div class="circle"><i class="my-icon fa fa-compass fa-2x" aria-hidden="true"></i>
+                </div>
+                <p>Drag & drop</p>
+                <p>Makes it easier to upload files when using multiple displays</p>
+            </div>
+
+            <div class="list">
+                <div class="circle"><i class="my-icon fa fa-search fa-2x" aria-hidden="true"></i>
+                </div>
+                <p>Tested</p>
+                <p>100% code coverage. That says it all..</p></div>
+
+            <div class="list">
+                <div class="circle"><i class="my-icon fa fa-search fa-2x" aria-hidden="true"></i></div>
+                <p>Pause / Resume</p>
+                <p>Put your upload on hold and resume when convenient.</p></div>
+
+        </div>
+
+        <div class="column-3">
+            <div class="list">
+                <div class="circle"><i class="my-icon fa fa-heart fa-2x" aria-hidden="true"></i>
+                </div>
+                <p>Validators</p>
+                <p>Set up custom validators for real-life situations</p>
+            </div>
+
+
+            <div class="list">
+                <div class="circle"><i class="bell fa fa-bell fa-2x" aria-hidden="true"></i>
+                </div>
+                <p>Totally adaptable</p>
+                <p>Change the UI and the UX at your will.</p> </div>
+
+            <div class="list">
+                <div class="circle"><i class="bell fa fa-bell fa-2x" aria-hidden="true"></i></div>
+                <p>Image manipulation</p>
+                <p>Preview and rescale images before uploading them.</p></div>
+        </div>
+
+        </div>
+
+        <h2 class="details2">Pricing</h2>
+
+        <div class="text2">
+            <p>PAY AS YOU UPLOAD</p>
+
+            <p>You can download the plugin for free as soon as you Sign Up. We only charge for uploading to the</p>
+            <p>cloud. If you use your own FTP for uploads we don't charge for the traffic.</p>
+        </div>
+
+        <div class="offer">
+            <button id="popular"> MOST POPULAR</button>
+        </div>
+
+        <div class="clear"></div>
+
+        <div class="black-div" >
+            <p id="standard-free">STANDARD</p>
+            <p>FREE</p>
+        </div>
+        <div class="black-div">
+            <p id="professional">PROFFESIONAL</p>
+            <p>9,99</p>
+        </div>
+        <div class="black-div" >
+            <p id="business"> BUSINESS </p>
+            <p>49,99</p>
+        </div>
 
     </div>
 
