--- a/index.html
+++ b/index.html
@@ -166,7 +166,20 @@
             <p>49,99</p>
         </div>
 
+
+        <div class="benefits">
+            <div class="inside-benefits">
+                <p>1 Website</p>
+                <p>2 GB Cloud Traffic</p>
+                <p>$0,99 for each additional Cloud GB</p>
+                <p>Unlimited FTP Traffic</p>
+            </div>
+        </div>
     </div>
+
+
+
+
 
 
     <footer>
