almost done. remaining just 1 button

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <p>Built by developers. We understand the importance of good docs.</p></div>
             <div class="list">
                 <div class="circle"><i class="my-icon fa fa-globe fa-2x" aria-hidden="true"></i></div>
-                <p>Chunking</p>
+                <p>Chunking</p><div id="comming" class="comming-button"><span>COMMING SOON</span></div>
                 <p>Multiple chunks for each file are uploaded simultaneously</p></div>
 
         </div>
@@ -135,9 +135,7 @@
                 <p>Image manipulation</p>
                 <p>Preview and rescale images before uploading them.</p></div>
         </div>
-
         </div>
-
         <h2 class="details2">Pricing</h2>
 
         <div class="text2">
@@ -155,17 +153,32 @@
 
         <div class="black-div" >
             <p id="standard-free">STANDARD</p>
-            <p>FREE</p>
+            <p class="floating-black-div">FREE</p>
+            <p></p>
+            <p></p>
         </div>
         <div class="black-div">
             <p id="professional">PROFFESIONAL</p>
-            <p>9,99</p>
+            <div id="dollar">$</div>
+            <p class="floating-black-div">9,99<span class="month">/MO</span></p>
+            <p>Billed monthly.</p>
+
         </div>
         <div class="black-div" >
             <p id="business"> BUSINESS </p>
-            <p>49,99</p>
+            <div id="dollar">$</div>
+            <p class="floating-black-div">49,99<span class="month">/MO</span></p>
+            <p>Billed monthly.</p>
         </div>
-
+        <div class="benefits">
+            <div class="inside-benefits">
+                <p>1 Website</p>
+                <p>2 GB Cloud Traffic</p>
+                <p>$0,99 for each additional Cloud GB</p>
+                <p>Unlimited FTP Traffic</p>
+                <p>24/7 Customer Support</p>
+            </div>
+        </div>
 
         <div class="benefits">
             <div class="inside-benefits">
@@ -173,20 +186,40 @@
                 <p>2 GB Cloud Traffic</p>
                 <p>$0,99 for each additional Cloud GB</p>
                 <p>Unlimited FTP Traffic</p>
+                <p>24/7 Customer Support</p>
+            </div>
+        </div>
+        <div class="benefits">
+            <div class="inside-benefits">
+                <p>1 Website</p>
+                <p>2 GB Cloud Traffic</p>
+                <p>$0,99 for each additional Cloud GB</p>
+                <p>Unlimited FTP Traffic</p>
+                <p>24/7 Customer Support</p>
             </div>
         </div>
     </div>
+    <div class="clear-div"></div>
 
 
-
-
-
-
-    <footer>
-
-
-
-    </footer>
+    <div class="footer">
+        <div class="footer-column footer-1">
+            <p>AwesomeUploader</p>
+            <p>© 2015 AwesomeUploader Inc.</p>
+        </div>
+        <div class="footer-column">
+            <p>About</p>
+            <p>Contact</p>
+        </div>
+        <div class="footer-column">
+            <p>Privacy Policy</p>
+            <p>Terms & Conditions</p>
+        </div>
+        <div class="footer-column">
+            <p>Facebok</p>
+            <p>Twitter</p>
+        </div>
+    </div>
 
 </body>
 </html>
